--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vuefire": "^3.0.0-alpha.2",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuetify-dialog": "^2.0.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
